# fuxing

./: .gitignore  __diff_taskpane.txt  _log_extract1.txt  _log_extract2.txt  _log_extract3.txt  _tool_analysis.txt  fuxing_agent设计需求.md  设计报告详细版本 - flat.docx  设计报告详细版本 - 标定20260206.docx  设计报告详细版本.docx
.claude/: settings.local.json
AIChat/: wizard_plugin.cmake
backend_agents/: .env.example  .gitignore  README.md  env.example  pyproject.toml  requirements.txt  simple_quivr_test.py  simple_test.py  test_document.txt  test_quivr_embedding.py  test_quivr_with_config.py  test_rag_service.py
backend_agents/app/: main.py
backend_agents/app/api/v1/: __init__.py  chat.py  files.py
backend_agents/app/config/: rag_workflow.yaml
backend_agents/app/core/: config.py  errors.py  util.py
backend_agents/app/graphs/: README.md  continue_agent.py  polish_agent.py  proofread_agent.py  qa_agent.py  review_agent.py  router.py  state.py
backend_agents/app/models/: __init__.py  chat.py  common.py  documents.py  enums.py  errors.py  files.py  qa.py  sessions.py  tasks.py  tools.py
backend_agents/app/services/: embedding.py  formatter.py  storage.py  streaming.py
backend_agents/app/uploads/: f_1756884455967__test.txt  f_1756885280844__星座动态分簇大模型申报书（公开）.docx  f_1756900021621__设计报告详细版本.docx  f_1757495410529__test_integration.txt
backend_agents/tests/: test_embedding_simple.py  test_health.py  test_upload.py
demo_ui/: index.html
deprecated_old_front_word_tools/: FuXing.csproj  FuXing.sln  PostBuild.bat  Register-UserCOM.ps1  RegisterPlugin.bat  RibbonUI.xml  UnregisterPlugin.bat  (+5 more)
(+295 files in other folders)
