[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "office-agent-backend"
version = "0.1.0"
description = "Backend for Office AI Suite (FastAPI + LangGraph)"
authors = [{name="Your Name", email="you@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "orjson>=3.10.0",
    "redis>=5.0.4",
    "psycopg[binary]>=3.2.1",
    "langgraph>=0.2.0; python_version>='3.10'",
    "numpy>=1.26.0"
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]